RESOLVED FIXED19697
Redundant ref release causing memory leak
https://bugs.webkit.org/show_bug.cgi?id=19697
Summary Redundant ref release causing memory leak
Rahul Kuchhal
Reported 2008-06-20 15:03:45 PDT
releaseRef() on ClipboardUtilitiesWin.cpp:413 is not required and is causing a memory leak.
Attachments
Patch to fix (1.09 KB, patch)
2008-06-20 15:08 PDT, Rahul Kuchhal
darin: review+
Rahul Kuchhal
Comment 1 2008-06-20 15:08:25 PDT
Created attachment 21861 [details] Patch to fix
Darin Adler
Comment 2 2008-06-20 15:52:46 PDT
Comment on attachment 21861 [details] Patch to fix r=me
Mark Rowe (bdash)
Comment 3 2008-06-22 17:48:31 PDT
In the future, please use the prepare-ChangeLog script to generate the ChangeLog entry. Your entry is in the wrong ChangeLog, does not contain your full name, and uses tabs instead of spaces for indentation.
Mark Rowe (bdash)
Comment 4 2008-06-22 17:49:04 PDT
Landed in r34729.
Note You need to log in before you can comment on or make changes to this bug.