2008-06-22  kuchhal  <kuchhal@yahoo.com>

Reviewed by Darin Adler.

        Fix https://bugs.webkit.org/show_bug.cgi?id=19697
        Bug 19697: Redundant releaseRef causing memory leak

        * platform/win/ClipboardUtilitiesWin.cpp:
        (WebCore::fragmentFromCF_HTML):


Canonical link: https://commits.webkit.org/27177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34729 268f45cc-cd09-0410-ab3c-d52691b4dbfc